# deep_learning

./: INSTALLATION.md  README.md  __init__.py  gaussian.py  logger.py  main.py  models_modules.py  multinomial.py  setup.cfg  setup.py  supervised_learning_utils.py  train_nn_models.py  train_using_supervised_learning.py  trainer.py  utils.py  utils_sl.py
cifar_10_dataset/: load_cifar_10.py
deep_learning/: gaussian.py  logger.py  losses.py  metrics.py  multinomial.py  train_nn_models.py  trainer.py
deep_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deep_learning/dataset_manager/: data_loading_utils.py
deep_learning/models_manager/: cnns.py  embeddings.py  gnns.py  mlps.py  model_utils.py  model_wrappers.py  rnns.py
example_code/example_testing/: example_testing.py
example_code/example_testing/example_trained_model/: Cifar10Classifier_cnn2d_000500  Cifar10Classifier_reslayer_0003_fcn_000500  learning_params.yml
example_code/example_training/: dataloader.py  example_learning_config.yml  example_models.py  learn.py  run_tracking.yml  training_utils.py
example_testing/: example_testing.py  example_testing_config.yml
example_testing/example_trained_model/: Cifar10Classifier_reslayer_0001_fcn_000500  Cifar10Classifier_reslayer_0002_fcn_000500  val_train_split.pkl
example_training/: dataloader.py  example_learning_config.yml  example_models.py  learn.py  run_tracking.yml  training_utils.py
