[metadata]
name = deep_learning
version = 0.1
description = Pytorch model training pipeline
long_description = file: README.md
url = http://github.com/zachares/deep_learning
author = Peter Zachares
author_email = zacharesp@gmail.com

[options]
packages = find:
include_package_data=True
install_requires =
    class-resolver
    h5py
    matplotlib
    numpy
    pyyaml
    tensorboard
    tensorboardX
    torch
    torch-scatter
    torch-sparse
    torch-cluster
    torch-spline-conv
    torch-geometric
    torchaudio
    torchvision
